--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,19 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>ems_db-master Maven Webapp</name>
   <url>http://maven.apache.org</url>
+       <properties>
+     	<!-- EXAMPLE FOR MYSQL -->
+     	<sonar.jdbc.url>
+	jdbc:mysql://localhost:3306/sonar
+    	 </sonar.jdbc.url>
+     	<sonar.jdbc.driver>com.mysql.jdbc.Driver</sonar.jdbc.driver>
+     	<sonar.jdbc.username>root</sonar.jdbc.username>
+     	<sonar.jdbc.password>root</sonar.jdbc.password>
+    	 <!-- SERVER ON A REMOTE HOST -->
+     	<sonar.host.url>http://localhost:9000/sonar</sonar.host.url>
+     </properties>
+
+  
   <dependencies>
   
 
