--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,7 @@
             </formats>
          </configuration>
 </plugin>
-<plugin> 
+<!-- <plugin> 
       <groupId>org.codehaus.mojo</groupId>
    <artifactId>sonar-maven-plugin</artifactId>
    <version>2.4</version>
@@ -152,7 +152,7 @@
            </goals>
        </execution>
     </executions>
-     </plugin>
+     </plugin> -->
 <!-- <plugin> -->
 <!-- <artifactId>maven-assembly-plugin</artifactId>
 <configuration>
