--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,11 @@
 	<artifactId>clover</artifactId>
 	<version>2.4.2</version>
 </dependency>
+<!-- <dependency>
+	<groupId>emma</groupId>
+	<artifactId>emma</artifactId>
+	<version>2.1.5320</version>
+</dependency> -->
 
 		
 		
